--- a/crates/ethereum/evm/Cargo.toml
+++ b/crates/ethereum/evm/Cargo.toml
@@ -27,11 +27,9 @@ reth-primitives-traits.workspace = true
 # Alloy
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
+alloy-evm.workspace = true
 alloy-sol-types.workspace = true
 alloy-consensus.workspace = true
-
-# Misc
-derive_more.workspace = true
 
 [dev-dependencies]
 reth-testing-utils.workspace = true
@@ -59,5 +57,4 @@ std = [
     "serde_json/std",
     "reth-primitives-traits/std",
     "reth-chainspec/std",
-    "derive_more/std",
 ]
