--- a/crates/optimism/evm/Cargo.toml
+++ b/crates/optimism/evm/Cargo.toml
@@ -26,7 +26,9 @@ reth-consensus-common.workspace = true
 
 # ethereum
 alloy-eips.workspace = true
+alloy-evm.workspace = true
 alloy-primitives.workspace = true
+alloy-op-evm.workspace = true
 op-alloy-consensus.workspace = true
 alloy-consensus.workspace = true
 
@@ -83,4 +85,5 @@ optimism = [
     "revm/optimism",
     "revm-primitives/optimism",
     "reth-optimism-primitives/optimism",
+    "alloy-op-evm/optimism",
 ]
