--- a/crates/ethereum/primitives/Cargo.toml
+++ b/crates/ethereum/primitives/Cargo.toml
@@ -18,14 +18,14 @@ reth-primitives-traits.workspace = true
 reth-zstd-compressors = { workspace = true, optional = true }
 
 # ethereum
-alloy-eips.workspace = true
+alloy-eips = { workspace = true, features = ["k256"] }
 alloy-primitives.workspace = true
 alloy-network = { workspace = true, optional = true }
 alloy-consensus = { workspace = true, features = ["serde"] }
 alloy-serde = { workspace = true, optional = true }
 alloy-rlp.workspace = true
 alloy-rpc-types = { workspace = true, optional = true }
-revm-primitives.workspace = true
+revm-context.workspace = true
 
 # misc
 arbitrary = { workspace = true, optional = true, features = ["derive"] }
@@ -57,18 +57,17 @@ test-utils = [
 ]
 alloy-compat = ["dep:alloy-network", "dep:alloy-serde", "dep:alloy-rpc-types"]
 std = [
-    "alloy-consensus/std",
-    "alloy-primitives/std",
-    "alloy-rlp/std",
-    "reth-primitives-traits/std",
-    "reth-zstd-compressors?/std",
-    "serde/std",
-    "alloy-eips/std",
-    "derive_more/std",
-    "secp256k1?/std",
-    "once_cell/std",
-    "revm-primitives/std",
-    "alloy-serde?/std",
+	"alloy-consensus/std",
+	"alloy-primitives/std",
+	"alloy-rlp/std",
+	"reth-primitives-traits/std",
+	"reth-zstd-compressors?/std",
+	"serde/std",
+	"alloy-eips/std",
+	"derive_more/std",
+	"secp256k1?/std",
+	"once_cell/std",
+	"alloy-serde?/std"
 ]
 reth-codec = [
     "std",
@@ -77,17 +76,16 @@ reth-codec = [
     "dep:reth-zstd-compressors",
 ]
 arbitrary = [
-    "dep:arbitrary",
-    "dep:rand",
-    "dep:secp256k1",
-    "alloy-consensus/arbitrary",
-    "alloy-primitives/arbitrary",
-    "reth-codecs?/arbitrary",
-    "reth-primitives-traits/arbitrary",
-    "alloy-eips/arbitrary",
-    "revm-primitives/arbitrary",
-    "alloy-rpc-types?/arbitrary",
-    "alloy-serde?/arbitrary",
+	"dep:arbitrary",
+	"dep:rand",
+	"dep:secp256k1",
+	"alloy-consensus/arbitrary",
+	"alloy-primitives/arbitrary",
+	"reth-codecs?/arbitrary",
+	"reth-primitives-traits/arbitrary",
+	"alloy-eips/arbitrary",
+	"alloy-rpc-types?/arbitrary",
+	"alloy-serde?/arbitrary"
 ]
 serde-bincode-compat = [
     "alloy-consensus/serde-bincode-compat",
