--- a/crates/evm/execution-errors/Cargo.toml
+++ b/crates/evm/execution-errors/Cargo.toml
@@ -19,6 +19,8 @@ reth-prune-types.workspace = true
 alloy-primitives.workspace = true
 alloy-rlp.workspace = true
 alloy-eips.workspace = true
+revm-primitives.workspace = true
+revm-context-interface.workspace = true
 nybbles.workspace = true
 
 thiserror.workspace = true
@@ -26,10 +28,10 @@ thiserror.workspace = true
 [features]
 default = ["std"]
 std = [
-    "reth-consensus/std",
-    "alloy-eips/std",
-    "alloy-primitives/std",
-    "alloy-rlp/std",
-    "thiserror/std",
-    "nybbles/std",
+	"reth-consensus/std",
+	"alloy-eips/std",
+	"alloy-primitives/std",
+	"alloy-rlp/std",
+	"thiserror/std",
+	"nybbles/std"
 ]
