--- a/crates/storage/storage-api/Cargo.toml
+++ b/crates/storage/storage-api/Cargo.toml
@@ -25,7 +25,7 @@ reth-storage-errors.workspace = true
 reth-trie.workspace = true
 reth-trie-db.workspace = true
 reth-db.workspace = true
-revm.workspace = true
+revm-database.workspace = true
 
 # ethereum
 alloy-eips.workspace = true
