--- a/crates/transaction-pool/Cargo.toml
+++ b/crates/transaction-pool/Cargo.toml
@@ -25,6 +25,7 @@ reth-storage-api.workspace = true
 reth-tasks.workspace = true
 revm-primitives.workspace = true
 revm-interpreter.workspace = true
+revm-specification.workspace = true
 
 # ethereum
 alloy-eips = { workspace = true, features = ["kzg"] }
