--- a/crates/revm/Cargo.toml
+++ b/crates/revm/Cargo.toml
@@ -24,6 +24,7 @@ alloy-primitives.workspace = true
 
 # revm
 revm.workspace = true
+revm-database.workspace = true
 
 [dev-dependencies]
 reth-trie.workspace = true
@@ -49,10 +50,11 @@ test-utils = [
     "revm/test-utils",
 ]
 serde = [
-    "revm/serde",
-    "alloy-eips/serde",
-    "alloy-primitives/serde",
-    "alloy-consensus/serde",
-    "reth-trie?/serde",
-    "reth-ethereum-forks/serde",
+	"revm/serde",
+	"alloy-eips/serde",
+	"alloy-primitives/serde",
+	"alloy-consensus/serde",
+	"reth-trie?/serde",
+	"reth-ethereum-forks/serde",
+	"revm-database/serde"
 ]
