--- a/crates/rpc/rpc-eth-api/Cargo.toml
+++ b/crates/rpc/rpc-eth-api/Cargo.toml
@@ -15,7 +15,8 @@ workspace = true
 # reth
 revm.workspace = true
 revm-inspectors.workspace = true
-revm-primitives = { workspace = true, features = ["dev"] }
+revm-primitives = { workspace = true }
+revm-inspector.workspace = true
 reth-primitives-traits.workspace = true
 reth-errors.workspace = true
 reth-evm.workspace = true
