--- a/crates/storage/errors/Cargo.toml
+++ b/crates/storage/errors/Cargo.toml
@@ -26,6 +26,8 @@ alloy-rlp.workspace = true
 derive_more.workspace = true
 thiserror.workspace = true
 
+revm-database-interface.workspace = true
+
 [features]
 default = ["std"]
 std = [
