--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -40,6 +40,7 @@ alloy-primitives.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-consensus.workspace = true
 revm.workspace = true
+revm-database.workspace = true
 
 # async
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
@@ -84,6 +85,12 @@ eyre.workspace = true
 alloy-consensus.workspace = true
 
 [features]
+optimism = [
+    "reth-execution-types/optimism",
+    "reth-codecs/op",
+    "reth-db/optimism",
+    "reth-db-api/optimism",
+]
 serde = [
     "dashmap/serde",
     "notify/serde",
