--- a/crates/trie/trie/Cargo.toml
+++ b/crates/trie/trie/Cargo.toml
@@ -20,7 +20,7 @@ reth-storage-errors.workspace = true
 reth-trie-sparse.workspace = true
 reth-trie-common.workspace = true
 
-revm.workspace = true
+revm-database.workspace = true
 
 # alloy
 alloy-eips.workspace = true
@@ -66,13 +66,17 @@ serde = [
     "alloy-consensus/serde",
     "alloy-trie/serde",
     "alloy-eips/serde",
-    "revm/serde",
     "reth-trie-common/serde",
     "reth-primitives-traits/serde",
+	"alloy-primitives/serde",
+	"alloy-consensus/serde",
+	"alloy-trie/serde",
+	"alloy-eips/serde",
+	"reth-trie-common/serde",
+	"revm-database/serde"
 ]
 test-utils = [
     "triehash",
-    "revm/test-utils",
     "reth-primitives-traits/test-utils",
     "reth-trie-common/test-utils",
     "reth-ethereum-primitives/test-utils",
