--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -40,6 +40,7 @@ alloy-primitives.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-consensus.workspace = true
 revm-database.workspace = true
+revm-state = { workspace = true, optional = true }
 
 # async
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
@@ -75,6 +76,8 @@ reth-testing-utils.workspace = true
 reth-ethereum-engine-primitives.workspace = true
 reth-ethereum-primitives.workspace = true
 
+revm-database-interface.workspace = true
+revm-state.workspace = true
 parking_lot.workspace = true
 tempfile.workspace = true
 assert_matches.workspace = true
@@ -99,7 +102,6 @@ serde = [
     "alloy-consensus/serde",
     "alloy-eips/serde",
     "alloy-rpc-types-engine/serde",
-    "revm/serde",
     "reth-codecs/serde",
     "reth-primitives-traits/serde",
     "reth-execution-types/serde",
@@ -121,7 +123,7 @@ test-utils = [
     "reth-codecs/test-utils",
     "reth-db-api/test-utils",
     "reth-trie-db/test-utils",
-    "revm/test-utils",
     "reth-prune-types/test-utils",
     "reth-stages-types/test-utils",
+    "revm-state",
 ]
