--- a/Cargo.toml
+++ b/Cargo.toml
@@ -420,10 +420,14 @@ reth-trie-sparse = { path = "crates/trie/sparse" }
 reth-zstd-compressors = { path = "crates/storage/zstd-compressors", default-features = false }
 
 # revm
-revm = { version = "19.4.0", default-features = false }
-revm-primitives = { version = "15.1.0", default-features = false }
-revm-interpreter = { version = "15.0.0", default-features = false }
-revm-inspectors = "0.15.0"
+#revm = { version = "19.4.0", default-features = false }
+revm = { path = "../revm/crates/revm", version = "19.4.0", default-features = false }
+#revm-primitives = { version = "15.1.0", default-features = false }
+revm-primitives = { path = "../revm/crates/primitives", version = "15.1.0", default-features = false }
+#revm-interpreter = { version = "15.0.0", default-features = false }
+revm-interpreter = { path = "../revm/crates/interpreter", version = "15.0.0", default-features = false }
+#revm-inspectors = "0.15.0"
+revm-inspectors = { path = "../revm-inspectors", version = "0.15.0" }
 
 # eth
 alloy-chains = { version = "0.1.32", default-features = false }
